WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207091
Non-alphabetical \c escapes should be syntax errors in Unicode patterns only
https://bugs.webkit.org/show_bug.cgi?id=207091
Summary
Non-alphabetical \c escapes should be syntax errors in Unicode patterns only
Alexey Shvayka
Reported
2020-02-01 05:58:23 PST
Test case: /\c2/u Expected: SyntaxError thrown Actual: RegExp instance ECMA262:
https://tc39.es/ecma262/#prod-annexB-ClassEscape
(/u flag precludes the use of ClassControlLetter) ClassEscape[U, N] :: [~U] c ClassControlLetter ClassControlLetter :: DecimalDigit _ Test262:
https://test262.report/browse/built-ins/RegExp/unicode_restricted_identity_escape_c.js
https://test262.report/browse/language/literals/regexp/u-invalid-class-escape.js
Attachments
Patch
(9.89 KB, patch)
2020-02-01 06:08 PST
,
Alexey Shvayka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Shvayka
Comment 1
2020-02-01 06:08:50 PST
Created
attachment 389459
[details]
Patch
WebKit Commit Bot
Comment 2
2020-02-01 16:20:10 PST
Comment on
attachment 389459
[details]
Patch Clearing flags on attachment: 389459 Committed
r255544
: <
https://trac.webkit.org/changeset/255544
>
WebKit Commit Bot
Comment 3
2020-02-01 16:20:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-02-01 16:21:19 PST
<
rdar://problem/59090903
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug